docs: meta tags and licence

--- a/index.html
+++ b/index.html
@@ -4,6 +4,50 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="title" content="Easy German Start" />
+    <meta
+      name="description"
+      content="You want to learn German but don't know where to start? Easy German Start is for you! Familiarize yourself with German by playing quiz games!"
+    />
+    <meta name="keywords" content="Learn German,German,Learning German" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+    <meta name="author" content="hsk.coder@gmail.com" />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://hsk-kr.github.io/easy-german-start/"
+    />
+    <meta property="og:title" content="Easy German Start" />
+    <meta
+      property="og:description"
+      content="You want to learn German but don't know where to start? Easy German Start is for you! Familiarize yourself with German by playing quiz games!"
+    />
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/hsk-kr/easy-german-start/main/public/icons/icon.png"
+    />
+
+    <!-- Twitter -->
+    <meta
+      property="twitter:card"
+      content="Easy German Start is for you! Familiarize yourself with German by playing quiz games!"
+    />
+    <meta
+      property="twitter:url"
+      content="https://hsk-kr.github.io/easy-german-start/"
+    />
+    <meta property="twitter:title" content="Easy German Start" />
+    <meta
+      property="twitter:description"
+      content="You want to learn German but don't know where to start? Easy German Start is for you! Familiarize yourself with German by playing quiz games!"
+    />
+    <meta
+      property="twitter:image"
+      content="https://raw.githubusercontent.com/hsk-kr/easy-german-start/main/public/icons/icon.png"
+    />
+
     <title>Easy Start German</title>
   </head>
   <body>
