fix: typo Easy Start German to Easy German Start

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       content="https://raw.githubusercontent.com/hsk-kr/easy-german-start/main/public/icons/icon.png"
     />
 
-    <title>Easy Start German</title>
+    <title>Easy German Start</title>
   </head>
   <body>
     <div id="root"></div>
